Remove vmlinux.h from repo and add Makefile generation
- Removed vmlinux.h file and all symlinks from git (3.8MB freed)
- Updated all 10 lesson Makefiles (lessons 01-10) to generate vmlinux.h at build time
- Added 'vmlinux.h' target that runs: bpftool btf dump file /sys/kernel/btf/vmlinux
- Made eBPF compilation depend on vmlinux.h generation
- Added vmlinux.h and output/ to .gitignore
- Updated clean targets to remove vmlinux.h
- Updated help targets to document vmlinux.h target

Benefits:
- Repo size reduced by 3.8MB
- vmlinux.h is always fresh for target kernel
- Portable across different kernel versions
- Automatic generation on first build

--- a/examples/lesson-01-helloworld/Makefile
+++ b/examples/lesson-01-helloworld/Makefile
@@ -1,4 +1,4 @@
-.PHONY: build run clean all
+.PHONY: build run clean all help
 
 CLANG ?= clang
 LLVM_STRIP ?= llvm-strip
@@ -16,11 +16,15 @@ CLANG_BPF_SYS_INCLUDES = $(shell clang -mdump-json -x c /dev/null | jq -r '.[] |
 
 all: build
 
-build: $(OUTPUT)/hello.o
+vmlinux.h: $(VMLINUX_BTF)
+	@echo "Generating vmlinux.h from kernel BTF..."
+	$(BPFTOOL) btf dump file $(VMLINUX_BTF) format c > vmlinux.h
+
+build: vmlinux.h $(OUTPUT)/hello.o
 	@mkdir -p $(OUTPUT)
 	go build -o $(OUTPUT)/hello-demo .
 
-$(OUTPUT)/hello.o: hello.c
+$(OUTPUT)/hello.o: hello.c vmlinux.h
 	@mkdir -p $(OUTPUT)
 	$(CLANG) -O2 -target bpf $(INCLUDES) -c hello.c -o $@
 
@@ -28,13 +32,15 @@ run: build
 	sudo $(OUTPUT)/hello-demo
 
 clean:
-	rm -rf $(OBJDIR)
+	rm -rf $(OBJDIR) vmlinux.h
 
 help:
 	@echo "Usage: make [target]"
 	@echo "Targets:"
 	@echo "  all       - Build everything (default)"
 	@echo "  build     - Build eBPF object and Go binary"
+	@echo "  vmlinux.h - Generate kernel type definitions"
 	@echo "  run       - Run the program with sudo"
-	@echo "  clean     - Remove build artifacts"
+	@echo "  clean     - Remove build artifacts and vmlinux.h"
 	@echo "  help      - Show this help message"
+
